# CMakeTest

./: CMakeLists.txt
MyLib/: func.cpp  func.hpp
MySource/: main.cpp
Test/: main.cpp
